# advent_of_code

./: .gitignore  LICENSE  README.md
2015/day02/: day02.py
2015/day04/: day04.py
2016/day01/: day01.py
2016/day02/: day02-part1.py  day02-part2.py
2016/day03/: day03.py
2016/day04/: day04.py
2016/day05/: day05.py
2016/day06/: day06.py
2016/day07/: day07.py
2016/day08/: #day08.py#  day08.py
2016/day09/: day09.py
2016/day10/: day10.py
2016/modules/: parser.py
2017/day01/: Cargo.toml
2017/day02/: Cargo.toml
2018/day01/: solution.py
2018/day02/: solution.py
2018/day04/: solution.py
2019/day01/: Cargo.toml
2019/day02/: Cargo.toml
2019/day03/: Cargo.toml  test
2019/day04/: Cargo.toml
2019/day05/: Cargo.toml  test  test-output
2019/day06/: Cargo.toml
2019/intcode/: Cargo.toml
2020/day01/: Cargo.toml
2020/day02/: Cargo.toml
2020/day08/: Cargo.toml
2021/: go.sum
2022/: go.mod  go.sum
2023/: Cargo.toml  pyproject.toml
2023/day01/: main.py
2023/day02/: main.py
2023/day03/: input  main.py  test2  test3
2023/day04/src/: main.rs
2023/day05/src/: main.rs
2023/day06/src/: main.rs
2023/day07/: Cargo.toml
2023/day07/src/: main.rs
2023/day08-graph/: Cargo.toml
2023/day08-graph/src/: main.rs
2023/day08/src/: main.rs
2023/day09/src/: main.rs  test2
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day13/: Cargo.toml
2023/day13/src/: main.rs
2023/day14/src/: main.rs
2023/day15/src/: main.rs
2023/day16/: Cargo.toml
2023/day16/src/: main.rs
2024/: README.md
day01/: day1.py
day03/: day03.py
(+94 files in other folders)
