[package]
name = "day07"
version = "0.1.0"
authors = ["Stephen Herbein <stephen272@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
petgraph = "0.5.1"
regex = "1.4.2"
lazy_static = "1.4.0"
